<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CurrencyTheme.Dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dip"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/thank_you_for_downloading"
            android:textColor="#FFFFFF"
            android:textSize="24sp" >
        </TextView>
    </FrameLayout>

    <ScrollView
        android:id="@+id/sv_eula_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/eula"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dip"
                android:text="@string/eula_text" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="16dip"
        android:background="#33B5E5" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/two_button_layout" />

</LinearLayout>