<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_info_frag_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dip"
    android:background="@drawable/header_info_card_background"
    android:orientation="vertical"
    android:weightSum="1" >

    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_margin="8dip"
        android:background="#44FFFFFF"
        android:gravity="center_horizontal"
        android:padding="4dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/at_current_conversion_rate" />

        <TextView
            android:id="@+id/tv_exchange_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dip"
            android:background="#eecc88"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:text="@string/default_exchange_rate"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_update_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/update_icon" />
    </LinearLayout> -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#22000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="0" >

            <LinearLayout
                android:id="@+id/ll_left_col_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:background="@drawable/title_selector"
                android:clickable="true"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1" >

                    <TextView
                        android:id="@+id/tv_titleLeft"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.70"
                        android:paddingLeft="8dip"
                        android:text="@string/USD"
                        android:textColor="#44000000"
                        android:textSize="36sp" />

                    <FrameLayout
                        android:layout_width="0dip"
                        android:layout_height="32dip"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.30" >

                        <ImageView
                            android:id="@+id/iv_left_info_icon"
                            android:layout_width="32dip"
                            android:layout_height="32dip"
                            android:layout_gravity="left|center_vertical"
                            android:layout_weight="0.30"
                            android:padding="2dip"
                            android:alpha="0.60"
                            android:background="@drawable/title_selector"
                            android:scaleType="fitCenter"
                            android:src="@drawable/info_icon" />
                    </FrameLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_subtitleLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:paddingLeft="8dip"
                    android:text="@string/united_states"
                    android:textAllCaps="true"
                    android:textColor="#44000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:paddingLeft="8dip" >

                    <TextView
                        android:id="@+id/tv_left_col_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/default_amount"
                        android:textColor="#44000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decimal_point"
                        android:textColor="#44000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_left_col_currency_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_amount"
                        android:textColor="#44000000"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_gravity="top"
                    android:background="#22000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_gravity="bottom"
                    android:background="#22000000" />
            </LinearLayout>

            <!--
             <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:orientation="vertical"
            android:paddingLeft="4dip"
            android:paddingRight="4dip"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="0.5" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="2"
                    android:background="#22000000" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>
            -->

            <LinearLayout
                android:id="@+id/ll_right_col_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:background="@drawable/title_selector"
                android:clickable="true"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1" >

                    <FrameLayout
                        android:layout_width="0dip"
                        android:layout_height="32dip"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.30" >

                        <ImageView
                            android:id="@+id/iv_right_info_icon"
                            android:layout_width="32dip"
                            android:layout_height="32dip"
                            android:layout_gravity="right|center_vertical"
                            android:padding="2dip"
                            android:alpha="0.60"
                            android:background="@drawable/title_selector"
                            android:scaleType="fitCenter"
                            android:src="@drawable/info_icon" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_titleRight"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.70"
                        android:gravity="right"
                        android:paddingRight="8dip"
                        android:text="@string/JPY"
                        android:textColor="#44000000"
                        android:textSize="36sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_subtitleRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:lines="2"
                    android:paddingRight="8dip"
                    android:text="@string/japan"
                    android:textAllCaps="true"
                    android:textColor="#44000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:paddingRight="8dip" >

                    <TextView
                        android:id="@+id/tv_right_col_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/default_amount"
                        android:textColor="#66FF0000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decimal_point"
                        android:textColor="#66FF0000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_right_col_currency_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_amount"
                        android:textColor="#66FF0000"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#22000000" />
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        layout="@layout/info_panel_layout" />

</LinearLayout>